--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 script:
   - make
 before_deploy:
-  - make VERSION=${TRAVIS_TAG} release -j2
+  - make VERSION=$TRAVIS_TAG release -j2
 deploy:
   provider: releases
   api_key: $GITHUB_DEPLOY_TRAVIS_TOKEN
